:art: 更新swagger設定
